tests/base/parser/bad/stmts_t-match-spid-with-bar-underscore-arrow-with.scilla
scilla_version 0

library TestLib

let a = True

contract Test
()

(* field cannot be a procedure so fails *)
transition arbitrary ()
  match a with
  | _ => field
  end
end
